# src/swagger/swagger-output.json
@@ -225,19 +225,6 @@
         }
       }
     },
-    "/store/getStores": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
     "/store/clearDataBase": {
       "get": {
         "description": "",
